03-gitops/apps/02-monitoring/tempo/tempo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ui
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ingress
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: tempo.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3100
#  tls:
#    - hosts:
#        - tempo.cluster
#      secretName: tempo-tls
